--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -82,3 +82,10 @@
     height: auto;
     box-shadow: 0 0 50px rgba(0,0,0,.75);
   }
+
+   @media only screen and (max-width: 576px) {
+    .card-img-top{
+      width: 100%;
+      margin: 0 auto;
+    }
+  }
