--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,3 +25,8 @@
 
 }
 
+.banner-title h1 h5{
+  font-size: 3em;
+  margin-top: 5%;
+}
+
